--- a/public/index.html
+++ b/public/index.html
@@ -37,12 +37,7 @@
   </section>
 
     <div id="wrapper">
-      <div id="articles">
-        <section class="section">
-          <div class="container">
-          </div>
-        </section>
-      </div>
+      <div id="articles"></div>
       <div id="notes"></div>
     </div>
   </body>
