save and remove save working

--- a/public/saved.html
+++ b/public/saved.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Scraping the Onion With Mongoose</title>
+    <title>Saved Articles</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.css">
@@ -39,7 +39,7 @@
   <div class="columns">
     <div class="column is-narrow"></div>
     <div class="column">
-      <div id="articles"></div>
+      <div id="saved"></div>
     </div>
     <div class="column is-narrow"></div>
   </div>
