--- a/public/saved.html
+++ b/public/saved.html
@@ -18,8 +18,8 @@
         <div class="navbar-start">
   			<span><a href="/"><button class="button is-success is-medium" id="home">Home</button></span>
   			<span><a href="/saved"><button class="button is-success is-medium" id="saved-articles">Saved Articles</button></a></span>
-  			<span><a href="/scrape"><button class="button is-success is-medium" id="new-scrape">Scrape New Articles</button></a></span>
-  		  </div>
+<!--   			<span><a href="/scrape"><button class="button is-success is-medium" id="new-scrape">Scrape New Articles</button></a></span>
+  		   -->  		  </div>
       </div>
     </nav>
 
@@ -38,13 +38,12 @@
 
   <div class="columns">
     <div class="column is-narrow"></div>
-    <div class="column">
-      <div id="saved"></div>
-    </div>
+    <div class="column is-two-thirds" id="saved"></div>
+    <div class="column is-narrow"></div>
+    <div class="column" id="notes"></div>
     <div class="column is-narrow"></div>
   </div>
 
 
-      <div id="notes"></div>
   </body>
 </html>
