--- a/public/index.html
+++ b/public/index.html
@@ -43,14 +43,13 @@
     </div>
     <div class="column is-narrow"></div>
   </div>
-      <div id="notes"></div>
 
       <!--Search Confirmation Modal -->
   <div id="search-count" class="modal">
     <div class="modal-background">
       <div class="modal-card">
         <title>Search Results Count</title>
-        <div class="search-modal-content">
+        <div class="modal-content">
         </div>
       </div>
     </div>
@@ -66,8 +65,8 @@ var searchModalContent = $("<div>");
 $(document).on("click", "#new-scrape", function(event) {
   // console.log("Count: " +count);
   searchModalContent.html("<h1>Scrape Complete.</h1>");
-  $(".search-modal-content").empty();
-  $(".search-modal-content").append(searchModalContent);
+  $(".modal-content").empty();
+  $(".modal-content").append(searchModalContent);
   searchModal.show();
 });
 
