scrape still grabs duplicates

--- a/public/saved.html
+++ b/public/saved.html
@@ -18,8 +18,7 @@
         <div class="navbar-start">
   			<span><a href="/"><button class="button is-success is-medium" id="home">Home</button></span>
   			<span><a href="/saved"><button class="button is-success is-medium" id="saved-articles">Saved Articles</button></a></span>
-<!--   			<span><a href="/scrape"><button class="button is-success is-medium" id="new-scrape">Scrape New Articles</button></a></span>
-  		   -->  		  </div>
+  		  </div>
       </div>
     </nav>
 
